Fix sidebar items hover bg color too light for dark mode.

--- a/assets/sass/components/_sidebar.scss
+++ b/assets/sass/components/_sidebar.scss
@@ -24,7 +24,7 @@
 }
 
 .course-menu li > a:hover {
-	background-color: #eeeeee;
+	background-color: var(--bs-secondary-bg, #f9f2f4);
 }
 
 #bs-navbar-collapse.minimised 
